# jhu_software_concepts

./: .gitignore  .readthedocs.yml  README.md
module_1/: Makefile  README.md  pyproject.toml  requirements.txt  run.py
module_1/src/utils/: generate_css_color_and_text_utils.py
module_1/src/website/: __init__.py  data.py  main.py  models.py  routes.py
module_1/src/website/static/css/: color-utilities.css  colors.min.css  core-utilities.css  custom.css  styles.css
module_1/src/website/static/js/: scroll.js
module_1/src/website/templates/: base.html  index.html
module_1/src/website/templates/components/: _contact.html  _experience.html  _footer.html  _home.html  _navbar.html  _profile.html  _projects.html  _recognition.html
module_2/: Makefile  README.md  __init__.py  clean.py  pyproject.toml  requirements.txt  scrape.py
module_2/tests/: __init__.py  clean_test.py  scraping_test.py
module_3/: .pylintrc  Makefile  pyproject.toml  requirements.txt
module_3/src/utils/: database.py  sql_query_sanitizer.py
module_3/src/website/: load_data.py  query_data.py  routes.py
module_3/src/website/static/css/: custom.css  styles.css
module_3/src/website/templates/: base.html  index.html
module_3/src/website/templates/components/: _footer.html  _navbar.html
module_4/: .pylintrc  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
module_4/docs/: conf.py  index.rst  modules.rst
module_4/docs/_build/html/: index.html  modules.html  py-modindex.html  searchindex.js
module_4/docs/_build/html/.doctrees/: environment.pickle
module_4/html/: .buildinfo  genindex.html  objects.inv  search.html
module_4/html/.doctrees/: index.doctree  modules.doctree
module_4/src/: __init__.py  order.py  pizza.py
module_4/tests/: __init__.py  test_integration.py  test_order.py  test_pizza.py
module_5/: .pylintrc  Makefile  README.md  app.py  pyproject.toml  requirements.txt
module_5/src/utils/: __init__.py  database.py  sql_query_sanitizer.py
module_5/src/website/: __init__.py  load_data.py  query_data.py  routes.py
module_5/src/website/templates/: index.html
