[project]
name = "grad-cafe-data-analysis"
version = "0.1.0"
description = "Loads cleaned Grad Café data into PostgreSQL and queries it to explore 2025 submission trends."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg2==2.9.10", "flask==3.1.1", "python-dotenv==1.1.0", "pip==25.1.1","blinker==1.9.0","click==8.2.1","itsdangerous==2.2.0","jinja2==3.1.6","markupsafe==3.0.2","werkzeug==3.1.3", "graphviz>=0.21", "pydeps>=3.0.1", "psycopg[binary]>=3.2.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "yapf==0.43.0",
    "pylint==3.3.7",
]

[tool.yapf]
based_on_style = "google"
column_limit = 100
indent_width = 4
blank_line_before_module_docstring = true
coalesce_brackets = true 
split_before_logical_operator = true
split_before_named_assigns = true
spaces_before_comment = 2
allow_split_before_dict_value = false
each_dict_entry_on_separate_line = false
split_arguments_when_comma_terminated = true
dedent_closing_brackets = true
split_complex_comprehension = true
split_before_first_argument = true

[tool.yapfignore]
ignore_patterns = [
  "temp/**/*.py",
  "temp2/*.py",
  "venv/**/*.py",
  ".venv/**/*.py",
  "env/**/*.py",
  ".env/**/*.py",
  "build/**/*.py",
  "dist/**/*.py",
  "__pycache__/**/*.py",
  ".eggs/**/*.py",
  "*.egg-info/**/*.py",
  "docs/**/*.py",
  ".vscode/**/*.py",
  ".pylintrc"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name"
]

[tool.pylint.BASIC]
good-names = ["i", "j", "k", "x", "y", "z", "db"]

[tool.pylint.FORMAT]
max-line-length = 500

[tool.mypy]
strict = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"